Analysis semantic and generate cpp code: stage 7